--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <label for="searchInput">Search guests</label>
             <input
               id="searchInput"
-              type="search"
+              type="text"
               placeholder="Type first name, last name, or company…"
               autocomplete="off"
             />
