--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
       font-weight: 700;
       letter-spacing: 0.16em;
       text-transform: uppercase;
+	  color: #e6ca88;
     }
 
     .empty-state {
