--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     }
 
     .mode-toggle button.active {
-      background: var(--accent);
+      background: #e6ca88;
       color: #000;
       font-weight: 600;
       transform: translateY(-0.5px);
@@ -155,7 +155,7 @@
       color: var(--text);
       padding: 9px 14px;
       padding-right: 40px;
-      font-size: 0.9rem;
+      font-size: 16px;
       outline: none;
       appearance: none;
       margin-bottom: 6px; /* space under box */
