--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       cursor: pointer;
       white-space: nowrap;
       transition: background 0.18s ease, color 0.18s ease, transform 0.1s ease;
+	  font-weight: 600;
     }
 
     .mode-toggle button.active {
