--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       background: transparent;
       color: var(--text-muted);
       padding: 6px 14px;
-      font-size: 0.8rem;
+      font-size: 16px;
       border-radius: var(--radius-pill);
       cursor: pointer;
       white-space: nowrap;
