--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
               stroke 0.18s ease,
               stroke-width 0.18s ease,
               transform 0.18s ease; /* allow scale to animate smoothly */
+  transform-box: fill-box;
   transform-origin: 50% 50%; /* centre transforms */
 }
 
