--- a/index.html
+++ b/index.html
@@ -249,26 +249,26 @@
       border-bottom: none;
     }
 
-    .result-name {
-      font-weight: 700;
-      font-size: 0.98rem;
-      letter-spacing: 0.02em;
-    }
+.result-name {
+  font-weight: 700;
+  font-size: 1.125rem; /* ≈ 18px on most devices */
+  letter-spacing: 0.02em;
+}
 
-    .result-company {
-      font-size: 0.82rem;
-      color: var(--text-muted);
-      margin-top: 2px;
-    }
+.result-company {
+  font-size: 1rem; /* ≈ 16px */
+  color: var(--text-muted);
+  margin-top: 3px;
+}
 
-    .result-table {
-      margin-top: 4px;
-      font-size: 0.78rem;
-      font-weight: 700;
-      letter-spacing: 0.16em;
-      text-transform: uppercase;
-      color: #e6ca88;
-    }
+.result-table {
+  margin-top: 6px;
+  font-size: 0.95rem; /* ≈ 15px */
+  font-weight: 700;
+  letter-spacing: 0.16em;
+  text-transform: uppercase;
+  color: #e6ca88;
+}
 
     .empty-state {
       padding: 16px 2px 6px;
