--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     .room-map-wrapper {
       margin-top: 18px;
       padding-top: 0;
-      border-top: none;   /* no horizontal line above TABLE LOCATION */
+      border-top: none; /* no horizontal rule above TABLE LOCATION */
     }
 
     .map-title {
@@ -297,7 +297,7 @@
       text-transform: uppercase;
       letter-spacing: 0.16em;
       color: var(--text-muted);
-      margin: 0 0 4px;
+      margin: 0 0 6px;
     }
 
     .map-hint {
@@ -444,7 +444,7 @@
             <p class="hint">Search ignores case and punctuation such as apostrophes.</p>
           </div>
 
-          <!-- Table dropdown (kept for internal state, always hidden) -->
+          <!-- Table dropdown (kept hidden but still in DOM) -->
           <div class="field" id="panel-table" style="display:none;">
             <label for="tableSelect">Table number</label>
             <select id="tableSelect">
@@ -460,17 +460,14 @@
           <span id="activeFilter"></span>
         </div>
 
-        <!-- Error -->
-        <div class="error-state" id="errorMessage" role="alert" style="display:none;"></div>
-
-        <!-- Room map (now appears ABOVE results) -->
+        <!-- Room map NOW sits before results -->
         <section
           class="room-map-wrapper"
           id="roomMapWrapper"
           aria-label="Room layout"
           style="display:none;"
         >
-          <h2 class="map-title">Table location</h2>
+          <h2 class="map-title">TABLE LOCATION</h2>
           <p class="map-hint">Tap any table on the map to see who is seated there.</p>
 
           <div class="room-map">
@@ -790,7 +787,10 @@
           </div>
         </section>
 
-        <!-- Results (now below the map) -->
+        <!-- Error -->
+        <div class="error-state" id="errorMessage" role="alert" style="display:none;"></div>
+
+        <!-- Results (now AFTER map) -->
         <section class="results" id="results" aria-live="polite" aria-label="Guest results list"></section>
       </main>
     </div>
@@ -846,6 +846,7 @@
       });
 
       dom.tableSelect.addEventListener("change", () => {
+        // Dropdown kept hidden; still wired in case ever used
         state.selectedTable = dom.tableSelect.value;
         render();
       });
@@ -867,7 +868,7 @@
             if (!table) return;
             setMode("table");
             state.selectedTable = table;
-            dom.tableSelect.value = table; // sync hidden select
+            dom.tableSelect.value = table; // keeps in sync, even if hidden
             render();
             dom.results.scrollTop = 0;
           });
@@ -1020,7 +1021,7 @@
         dom.modeTableBtn.setAttribute("aria-selected", "true");
         dom.modeSearchBtn.setAttribute("aria-selected", "false");
         dom.searchPanel.style.display = "none";
-        dom.tablePanel.style.display = "none"; // keep hidden
+        dom.tablePanel.style.display = "none"; // we now use the map instead
       }
 
       render();
@@ -1071,6 +1072,7 @@
       if (!state.loaded) {
         dom.activeFilter.textContent = "Loading guest list…";
         dom.results.innerHTML = "";
+        dom.results.style.borderTop = ""; // default
         updateMapHighlight();
         return;
       }
@@ -1089,11 +1091,13 @@
         }
       }
 
+      // Summary text
       if (!hasQuery) {
         if (isSearchMode) {
           dom.activeFilter.textContent = "Start typing a name or company.";
         } else {
-          dom.activeFilter.textContent = ""; // no extra instructions; map text handles it
+          // In table mode, we rely on the TABLE LOCATION hint, so no extra text here
+          dom.activeFilter.textContent = "";
         }
       } else if (isSearchMode) {
         dom.activeFilter.textContent = state.searchTerm
@@ -1105,12 +1109,19 @@
           : "";
       }
 
+      // Border above results: keep in search mode, remove in table mode
+      if (isSearchMode) {
+        dom.results.style.borderTop = ""; // use CSS (line visible)
+      } else {
+        dom.results.style.borderTop = "none"; // no line under map
+      }
+
       if (!hasQuery) {
         if (isSearchMode) {
           dom.results.innerHTML =
             '<div class="empty-state">Begin by typing a first name, last name, or company.</div>';
         } else {
-          // Table mode with no table selected: just show blank area; map carries instructions.
+          // In table mode with no table selected, no extra message under the map
           dom.results.innerHTML = "";
         }
         updateMapHighlight();
